VO-2915 - Title Releases overflow issues & bs-datepicker translations
- Translated bs-datepicker values to current language
- Fixed wrapping date field name
- Bugfix for Title Release icon button wrapping in all languages

--- a/app/styles/lang/_es.scss
+++ b/app/styles/lang/_es.scss
@@ -44,4 +44,22 @@ body.lang_es {
       }
     }
   }
+
+
+  /* Title Releases */
+  #TitleReleasesPage {
+
+    .filter-options {
+      .span5 {
+        width: 31%;
+      }
+      .span7 {
+        width: 66%;
+      }
+      .range-end {
+        width: 125px;
+      }
+    }
+
+  }
 }
