--- a/app/styles/lang/_fr_CA.scss
+++ b/app/styles/lang/_fr_CA.scss
@@ -61,4 +61,15 @@ body.lang_fr_CA {
       }
     }
   }
+
+
+  #TitleReleasesPage {
+
+    .requests-grid {
+      .btn-title-request {
+        width: 150px;
+      }
+    }
+
+  }
 }
